--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     {% block extra_css %}{% endblock %}
-    <link rel="Stylesheet" type="text/css" href="{{ STATIC_URL }}css/style.css">
+    <link rel="Stylesheet" type="text/css" href="static/css/style.css">
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
 
     <title>{% block title %}Thomas Barnette{% endblock %}</title>
@@ -20,11 +20,11 @@
 	
 	<div id="nav">
 	  <ul>
-	    <li></li>
-	    <li></li>
-	    <li></li>
-	    <li></li>
-	    <li></li>
+	    <li>Music</li>
+	    <li>Biography</li>
+	    <li>Video</li>
+	    <li>News</li>
+	    <li>Contact</li>
 	  </ul>
 	</div>
 	
