--- a/templates/base.html
+++ b/templates/base.html
@@ -46,7 +46,7 @@
 	<div id="music">
 	  <h2>MUSIC</h2>
 	  <div id="music-album">
-	    <p>picture here</p>
+	    <img src="static/images/CD.jpeg">
 	  </div>
 
 	  <div id="music-list">
