--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,7 @@
       <div id="header">
 
 	<div id="banner">
-	  <a href="#top"><h1>THOMAS BARNETTE</h1></a>
+	  <a href="#top"><img src="static/images/thomasbarnett_logo.png"></a>
 	</div>
 	
 	<div id="nav">
@@ -86,7 +86,7 @@
 	  Thomas began singing when he was 4 years old. The first song that came out of his mouth was “God Gave Me A Song”. Ever since that time, singing, music, and performing has been Thomas’ strongest passion in life. After graduating with a degree in Industrial Engineering from Georgia Tech, Thomas worked in the corporate world for a while. Eventually, he had to live his passion for music. He worked with the Olympic Opening Ceremonies in 1996 as a choreographer, singer and dancer for the Opening Ceremonies and Coca Cola Olympic City. Thomas has also worked with shows like the Super Bowl Halftime Show, Fox Theater Anniversary Show, and has written jingles and been in commercials for many different companies in the Atlanta area. Now, Thomas’ goal is to share his music with the world. His CD entitled “Thomas Barnette” will be released this summer on his own label TNB Music.
 	</p>
 
-	<a href="#top">Back To Top</a>
+	<a href="#top" class="top">Back To Top</a>
 
       </div>
 
@@ -104,6 +104,7 @@
 	</ul>
 
       </div>
+	<a href="#top" class="top">Back To Top</a>
 
       <div id="news">
 	<h2>NEWS</h2>
@@ -120,7 +121,7 @@
 
 
       </div>
-	<a href="#top">Back To Top</a>
+	<a href="#top" class="top">Back To Top</a>
 
     </div>
 
@@ -146,7 +147,9 @@
       </div>
 
       <div id="social-media">
-	<p>links here</p>
+	<a href="http://www.facebook.com/"><img src="static/images/myspace.jpg"></a>
+	<a href="http://www.facebook.com/"><img src="static/images/facebook.jpg"></a>
+	<a href="mailto:info@thomasbarnette.com" class="email">info@thomasbarnette.com</a>
       </div>
       
     </div>
