--- a/static/css/style.css
+++ b/static/css/style.css
@@ -40,8 +40,10 @@ body {
 }
 
 #nav ul {
-    width: 900px;
+    width: 1000px;
     margin-left: auto; margin-right: auto;
+    position: relative;
+    left: 70px;
 }
 
 #nav li {
@@ -49,15 +51,62 @@ body {
     top: 15px;
     height: 100px;
     display: inline;
+    margin-right: 100px;
 }
 
 #nav a {
     font-family: walkway-bold;
     color: #58595b;
     text-decoration: none;
-    width: 500px;
-    background-image: url('../images/news-over.png');
+
 }
+
+/* Nav Backgrounds */
+a.music {
+    padding: 10px 20px 10px 8px;
+}
+
+a.biography {
+    padding: 10px 20px 10px 20px;
+}
+ 
+a.video {
+    padding: 10px 20px 10px 8px;
+}
+
+a.news {
+    padding: 10px 20px 10px 8px;
+}
+
+a.contact {
+    padding: 10px 20px 10px 12px;
+}
+
+a:hover.music {
+    background: url('../images/Music-over.png') no-repeat;
+    padding: 10px 20px 10px 8px;
+}
+
+a:hover.biography {
+    background: url('../images/bio-over.png') no-repeat;
+    padding: 10px 20px 10px 20px;
+}
+
+a:hover.video {
+    background: url('../images/video-over.png') no-repeat;
+    padding: 10px 20px 10px 8px;
+}
+
+a:hover.news {
+    background: url('../images/news-over.png') no-repeat;
+    padding: 10px 20px 10px 8px;
+}
+
+a:hover.contact {
+    background: url('../images/contact-over.png') no-repeat;
+    padding: 10px 20px 10px 12px;
+}
+
 
 #slideshow {
     height: 149px;
@@ -151,6 +200,8 @@ h2 {
     margin-top: 120px;
 }
 
+
+
 /* Footer Styles */
 #footer {
     width: 100%;
@@ -161,7 +212,7 @@ h2 {
 }
 
 #footer_slideshow {
-    padding-top: 35px;
+    padding-top: 20px;
 }
 
 #footer-slides {
@@ -176,7 +227,7 @@ h2 {
 #social-media {
     width: 900px;
     margin-left: auto; margin-right: auto;
-    margin-top: 65px;
+    margin-top: 55px;
 }
 
 #social-media a {
@@ -188,13 +239,16 @@ h2 {
 /* Accordion */
 
 #accordion {
-    padding-left: 50px;
     margin-bottom: 80px;
 }
 
 #accordion p {
     font-family: helvetica;
-    line-height: 25px;
+    line-height: 40px;
+    margin-left: 50px;
+    font-weight: lighter;
+    color: #58595b;
+    margin-top: 50px;
 }
 
 #about-accordion {
@@ -211,32 +265,35 @@ h2 {
     font-style: italic;
     font-weight: lighter;
     padding-top: 10px;
+    color: #58595b;
+
 }
 
 #accordion h3 {
     font-size: 18px;
     font-family: helvetica;
-    font-weight: lighter;
+    font-weight: bold;
     color: #58595b;
+    margin-top: 60px;
 }
 
 #accordion h2 {
     padding-left: 50px;
-
+    margin: 0px;
 }
 
 #accordion a {
     color: #58595b;
     text-decoration: none;
-}
-
-#accordion a:visited {
-    color: black;
-    text-decoration: none;
+    font-family: helvetica;
+    letter-spacing: 1px;
+    font-size: 12pt;
 }
 
 .ui-accordion-content {
 
 }
+
+.ui-state-focus { outline: none; }
 
 }
