--- a/templates/base.html
+++ b/templates/base.html
@@ -52,18 +52,18 @@
 	<div id="slideshow">
 	  <div id="slide-wrap">
 	    <ul id="slides">
-	      <li style="width:80px; height:80px;"><a href="static/images/slides/Layer1.jpg" rel="prettyPhoto"><img src="static/images/thumbs/ThomasMontage_01.jpg"></a></li>
-	      <li style="width:80px; height:80px;"><img src="static/images/thumbs/ThomasMontage_02.jpg"></li>
-	      <li style="width:80px; height:80px;"><img src="static/images/thumbs/ThomasMontage_03.jpg"></li>
-	      <li style="width:80px; height:80px;"><img src="static/images/thumbs/ThomasMontage_04.jpg"></li>
-	      <li style="width:80px; height:80px;"><img src="static/images/thumbs/ThomasMontage_05.jpg"></li>
-	      <li style="width:80px; height:80px;"><img src="static/images/thumbs/ThomasMontage_06.jpg"></li>
-	      <li style="width:80px; height:80px;"><img src="static/images/thumbs/ThomasMontage_07.jpg"></li>
-	      <li style="width:80px; height:80px;"><img src="static/images/thumbs/ThomasMontage_08.jpg"></li>
-	      <li style="width:80px; height:80px;"><img src="static/images/thumbs/ThomasMontage_09.jpg"></li>
-	      <li style="width:80px; height:80px;"><img src="static/images/thumbs/ThomasMontage_10.jpg"></li>
-	      <li style="width:80px; height:80px;"><img src="static/images/thumbs/ThomasMontage_11.jpg"></li>
-	      <li style="width:80px; height:80px;"><img src="static/images/thumbs/ThomasMontage_12.jpg"></li>
+	      <li style="width:80px; height:80px;"><a href="static/images/slides/Layer1.jpg" rel="prettyPhoto[slide]"><img src="static/images/thumbs/ThomasMontage_01.jpg"></a></li>
+	      <li style="width:80px; height:80px;"><a href="static/images/slides/Layer2.jpg" rel="prettyPhoto[slide]"><img src="static/images/thumbs/ThomasMontage_02.jpg"></a></li>
+	      <li style="width:80px; height:80px;"><a href="static/images/slides/Layer3.jpg" rel="prettyPhoto[slide]"><img src="static/images/thumbs/ThomasMontage_03.jpg"></a></li>
+	      <li style="width:80px; height:80px;"><a href="static/images/slides/Layer4.jpg" rel="prettyPhoto[slide]"><img src="static/images/thumbs/ThomasMontage_04.jpg"></a></li>
+	      <li style="width:80px; height:80px;"><a href="static/images/slides/Layer5.jpg" rel="prettyPhoto[slide]"><img src="static/images/thumbs/ThomasMontage_05.jpg"></a></li>
+	      <li style="width:80px; height:80px;"><a href="static/images/slides/Layer6.jpg" rel="prettyPhoto[slide]"><img src="static/images/thumbs/ThomasMontage_06.jpg"></a></li>
+	      <li style="width:80px; height:80px;"><a href="static/images/slides/Layer7.jpg" rel="prettyPhoto[slide]"><img src="static/images/thumbs/ThomasMontage_07.jpg"></a></li>
+	      <li style="width:80px; height:80px;"><a href="static/images/slides/Layer8.jpg" rel="prettyPhoto[slide]"><img src="static/images/thumbs/ThomasMontage_08.jpg"></a></li>
+	      <li style="width:80px; height:80px;"><a href="static/images/slides/Layer9.jpg" rel="prettyPhoto[slide]"><img src="static/images/thumbs/ThomasMontage_09.jpg"></a></li>
+	      <li style="width:80px; height:80px;"><a href="static/images/slides/Layer10.jpg" rel="prettyPhoto[slide]"><img src="static/images/thumbs/ThomasMontage_10.jpg"></a></li>
+	      <li style="width:80px; height:80px;"><a href="static/images/slides/Layer12.jpg" rel="prettyPhoto[slide]"><img src="static/images/thumbs/ThomasMontage_11.jpg"></a></li>
+	      <li style="width:80px; height:80px;"><a href="static/images/slides/Layer13.jpg" rel="prettyPhoto[slide]"><img src="static/images/thumbs/ThomasMontage_12.jpg"></a></li>
 	    </ul>
 	  </div>
 	</div>
@@ -129,24 +129,24 @@
       <div id="footer_slideshow">
 	  <div id="slide-wrap">
 	    <ul id="footer-slides">
-	      <li style="width:80px; height:80px;"><a href="static/images/slides/Layer1.jpg" rel="prettyPhoto"><img src="static/images/thumbs/ThomasMontage_01.jpg"></a></li>
-	      <li style="width:80px; height:80px;"><img src="static/images/thumbs/ThomasMontage_02.jpg"></li>
-	      <li style="width:80px; height:80px;"><img src="static/images/thumbs/ThomasMontage_03.jpg"></li>
-	      <li style="width:80px; height:80px;"><img src="static/images/thumbs/ThomasMontage_04.jpg"></li>
-	      <li style="width:80px; height:80px;"><img src="static/images/thumbs/ThomasMontage_05.jpg"></li>
-	      <li style="width:80px; height:80px;"><img src="static/images/thumbs/ThomasMontage_06.jpg"></li>
-	      <li style="width:80px; height:80px;"><img src="static/images/thumbs/ThomasMontage_07.jpg"></li>
-	      <li style="width:80px; height:80px;"><img src="static/images/thumbs/ThomasMontage_08.jpg"></li>
-	      <li style="width:80px; height:80px;"><img src="static/images/thumbs/ThomasMontage_09.jpg"></li>
-	      <li style="width:80px; height:80px;"><img src="static/images/thumbs/ThomasMontage_10.jpg"></li>
-	      <li style="width:80px; height:80px;"><img src="static/images/thumbs/ThomasMontage_11.jpg"></li>
-	      <li style="width:80px; height:80px;"><img src="static/images/thumbs/ThomasMontage_12.jpg"></li>
+	      <li style="width:80px; height:80px;"><a href="static/images/slides/Layer1.jpg" rel="prettyPhoto[slide]"><img src="static/images/thumbs/ThomasMontage_01.jpg"></a></li>
+	      <li style="width:80px; height:80px;"><a href="static/images/slides/Layer2.jpg" rel="prettyPhoto[slide]"><img src="static/images/thumbs/ThomasMontage_02.jpg"></a></li>
+	      <li style="width:80px; height:80px;"><a href="static/images/slides/Layer3.jpg" rel="prettyPhoto[slide]"><img src="static/images/thumbs/ThomasMontage_03.jpg"></a></li>
+	      <li style="width:80px; height:80px;"><a href="static/images/slides/Layer4.jpg" rel="prettyPhoto[slide]"><img src="static/images/thumbs/ThomasMontage_04.jpg"></a></li>
+	      <li style="width:80px; height:80px;"><a href="static/images/slides/Layer5.jpg" rel="prettyPhoto[slide]"><img src="static/images/thumbs/ThomasMontage_05.jpg"></a></li>
+	      <li style="width:80px; height:80px;"><a href="static/images/slides/Layer6.jpg" rel="prettyPhoto[slide]"><img src="static/images/thumbs/ThomasMontage_06.jpg"></a></li>
+	      <li style="width:80px; height:80px;"><a href="static/images/slides/Layer7.jpg" rel="prettyPhoto[slide]"><img src="static/images/thumbs/ThomasMontage_07.jpg"></a></li>
+	      <li style="width:80px; height:80px;"><a href="static/images/slides/Layer8.jpg" rel="prettyPhoto[slide]"><img src="static/images/thumbs/ThomasMontage_08.jpg"></a></li>
+	      <li style="width:80px; height:80px;"><a href="static/images/slides/Layer9.jpg" rel="prettyPhoto[slide]"><img src="static/images/thumbs/ThomasMontage_09.jpg"></a></li>
+	      <li style="width:80px; height:80px;"><a href="static/images/slides/Layer10.jpg" rel="prettyPhoto[slide]"><img src="static/images/thumbs/ThomasMontage_10.jpg"></a></li>
+	      <li style="width:80px; height:80px;"><a href="static/images/slides/Layer12.jpg" rel="prettyPhoto[slide]"><img src="static/images/thumbs/ThomasMontage_11.jpg"></a></li>
+	      <li style="width:80px; height:80px;"><a href="static/images/slides/Layer13.jpg" rel="prettyPhoto[slide]"><img src="static/images/thumbs/ThomasMontage_12.jpg"></a></li>
 	    </ul>
 	  </div>
       </div>
 
       <div id="social-media">
-	<a href="mailto:info@thomasbarnette.com" class="email">info@thomasbarnette.com</a>
+	<a href="mailto:info@thomasbarnette.com" class="email">info@thomasbarnette.com</a> <p>© 2011 ThomasBarnette.com</p>
       </div>
       
     </div>
