Added Full CMS functionality

--- a/views/admin.html
+++ b/views/admin.html
@@ -20,6 +20,7 @@
 
 <body>
 	<% if session[:user] then %>
+		<center><img src="/img/thomasbarnett_logo.png" id="admin-logo" width="470" height="27" alt="Thomasbarnett Logo"></center>
 		<div id="menu">
 			<p>
 				<a href="/admin" class="main left" >CMS</a>
