--- a/views/sign_in.html
+++ b/views/sign_in.html
@@ -6,7 +6,7 @@
 	<meta charset="utf-8">
 	
 	<title>CMS</title>	
-	<link rel="stylesheet" type="text/css" href="/css/design.css">	
+	<link rel="stylesheet" type="text/css" href="css/design.css">	
 		
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
@@ -19,6 +19,7 @@
 </head>
 
 <body>
+	<center><img src="img/thomasbarnett_logo.png" id="admin-logo" width="470" height="27" alt="Thomasbarnett Logo"></center>
 		<div id="menu">
 			<%= alert %>
 		</div>
