--- a/public/css/design.css
+++ b/public/css/design.css
@@ -6,30 +6,7 @@ body {
 	-webkit-text-size-adjust:none;
 }
 
-.left {
-	float: left;
-}
 
-.right {
-	float: right;
-}
-	
-.center {
-	margin-left: auto;
-	margin-right: auto;
-}	
-
-.inline {
-	display: inline;
-}
-
-.hide {
-	display; none;
-}
-
-.text-center {
-	text-align: center;
-}
 		
 a img { border: none; }
 		
@@ -206,6 +183,36 @@ input.button {
 	margin-top: 50px;
 	margin-left: 100px;
 }
+
+.left {
+	float: left;
+}
+
+.right {
+	float: right;
+}
+	
+.center {
+	margin-left: auto;
+	margin-right: auto;
+}	
+
+.inline {
+	display: inline;
+}
+
+.hide {
+	display; none;
+}
+
+.text-center {
+	text-align: center;
+}
+
+#admin-logo {
+	margin-left: -40px;
+}
+
 	
 	
 	
