--- a/views/sign_in.html
+++ b/views/sign_in.html
@@ -21,10 +21,11 @@
 <body>
 	<center><img src="img/thomasbarnett_logo.png" id="admin-logo" width="470" height="27" alt="Thomasbarnett Logo"></center>
 		<div id="menu">
-			<%= alert %>
 		</div>
 
-	<div id="content-container">
+	<div id="content-container" style="padding-top: 20px;">
+		<%= alert %>
+		
 		<div id="sign-in"  class="center">
 
 			<form action="/sign-in" id="sign-in" method="post">
