--- a/views/index.html
+++ b/views/index.html
@@ -44,29 +44,16 @@
 	
 
 	<div id="content">
+ 
      
 		<div id="music">
 			<h2>MUSIC</h2>
+			<div id="audio" style="float: right; width: 400px; padding-left: 0; padding-right: 110px; margin-top: 195px; ">
+				<%=  erb :test, :layout => false %> 
+			</div>
 			<div id="music-album">
 			  <img src="/img/CD.jpeg">
 			</div>
-
-			<div id="music-list" class="right">
-   			  <audio>
-				<source src="http://k003.kiwi6.com/hotlink/2vnj4ex0g9/victim_master.wav"></source>
-			  </audio>
-			<div class="audio-controls">
-				<a class="audio-play" title="Play/Pause"></a>
-				<div class="audio-seek"></div>
-				<div class="audio-timer">00:00</div>
-				<div class="volume-box">
-					<div class="volume-slider"></div>
-					<a class="volume-button" title="Mute/Unmute"></a>
-				</div>
-			</div>
-			</div>
-
-
 		</div>
 
 		<div id="biography">		  
@@ -77,6 +64,7 @@
 		<div id="video" name="video">
 			<h2>VIDEO</h2>
 			<div id="accordion">
+				<% @videos = @videos.reverse %>
 				<% if @videos == nil then %>
 				  <p>Check back soon for videos</p>
 				<% else %>
@@ -97,6 +85,7 @@
 			<h2>NEWS</h2>
 			
 			<div id="accordion">
+			  <% @posts = @posts.reverse %>
 			  <% @posts.each do |post| %>
 			  <%= entry(post.title, post.created_at.display, post.article) %>
 			  <% end %>
@@ -137,6 +126,3 @@
      </div>
      
    </div>
-
-
-
