--- a/views/modify_post.html
+++ b/views/modify_post.html
@@ -1,6 +1,5 @@
 <h2>News</h2>
 <h3>Editing</h3>
-<a href="/news/edit/">Back</a>
 <form action="/admin/update/news/<%= @post.id %>"  method="post" class="new-element-form" >
 	<p class="new-element-form" id="text" >
 		<input type="text" name="title" class="textfield" value="<%= @post.title %>" />
@@ -9,7 +8,7 @@
 		<textarea type="text" name="article" class="textfield" value="<%= @post.article %>" cols="72" rows="10"><%= @post.article %></textarea>
 	</p>
 	<p>
-		<input type="submit" value="Update Post" class="btn">
+		<input type="submit" value="Update Post" class="btn">&nbsp; <a href="/news/edit/" class="danger" >Cancel</a>
 	</p>
 	
 </form>
