--- a/views/modify_video.html
+++ b/views/modify_video.html
@@ -1,15 +1,15 @@
 <h2>Video</h2>
 <h3>Editing</h3>
-<a href="/video/edit/">Back</a>
 <form action="/admin/update/video/<%= @video.id %>"  method="post" class="new-element-form" >
 	<p class="new-element-form" id="text" >
 		<input type="text" name="title" class="textfield" value="<%= @video.title %>" />
 	</p>
 	<p class="new-element-form" id="text" >
-		<input type="text" name="article" class="textfield" value="<%= @video.link %>" cols="72" rows="10">
+		<input type="text" name="link" class="textfield" value="<%= @video.link %>" cols="72" rows="10">
 	</p>
 	<p>
-		<input type="submit" value="Update Post" class="btn">
+		<input type="submit" value="Update Post" class="btn">&nbsp; <a href="/video/edit/" class="danger">Cancel</a>
+		
 	</p>
 	
 </form>
